package CommandSales;

public class Half {

    private boolean halfPriceOn;

    void startHalfPriceSale()
    {
        halfPriceOn = true;
    }

    void stopHalfPriceSale()
    {
        halfPriceOn = false;
    }
}
