package CommandSales;

public interface CommandClass{
    public void execute();
}