@startuml

title __COMMANDSALES's Class Diagram__\n


      interface CommandSales.CommandClass {
          {abstract} + execute()
      }



      class CommandSales.Half {
          - halfPriceOn : boolean
          ~ startHalfPriceSale()
          ~ stopHalfPriceSale()
      }

      class CommandSales.HalfPriceStartCommand {
          + HalfPriceStartCommand()
          + execute()
      }

      class CommandSales.HalfPriceStopCommand {
          + HalfPriceStopCommand()
          + execute()
      }

      class CommandSales.SaleCommand {
          + Sale()
          + setCommand()
      }

      class CommandSales.Twenty {
          - TwentyOn : boolean
          ~ startTwentyPercentSale()
          ~ stopTwentyPercentSale()
      }

      class CommandSales.TwentyPercentStartCommand {
          + TwentyPercentStartCommand()
          + execute()
      }

      class CommandSales.TwentyPercentStopCommand {
          + TwentyPercentStopCommand()
          + execute()
      }



  CommandSales.HalfPriceStartCommand .up.|> CommandSales.CommandClass
  CommandSales.HalfPriceStartCommand o-- CommandSales.Half : half
  CommandSales.HalfPriceStopCommand .up.|> CommandSales.CommandClass
  CommandSales.HalfPriceStopCommand o-- CommandSales.Half : half
  CommandSales.SaleCommand o-- CommandSales.CommandClass : sale
  CommandSales.TwentyPercentStartCommand .up.|> CommandSales.CommandClass
  CommandSales.TwentyPercentStartCommand o-- CommandSales.Twenty : twenty
  CommandSales.TwentyPercentStopCommand .up.|> CommandSales.CommandClass
  CommandSales.TwentyPercentStopCommand o-- CommandSales.Twenty : twenty



right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
